Added support for WM_INPUTLANGCHANGEREQUEST and WM_INPUTLANGCHANGE.  Fixes bug #12317.